# qfs

./: CMakeLists.txt  qfilemanager.cpp  qfilemanager.h  qfileremover.cpp  qfileremover.h  qfsthread.cpp  qfsthread.h
tests/: CMakeLists.txt  main.cpp
